--- a/index.html
+++ b/index.html
@@ -753,12 +753,12 @@
                         As a federated athlete, I was part of the club founded by a Portuguese former Olympic athlete, Manuela Machado: <a href="https://www.instagram.com/cyclones_sanitop/" target="_blank" rel="CYCLONES">Cyclones Sanitop</a>.</p>
                 </div>
                 <div class="descripcion">
-                    <p class="Lindy"> Lindy Hop is a social dance that combines elements of jazz, tap, breakaway, and Charleston, and is known for being energetic, fun, and improvisational. 
+                    <p class="Lindy"> Lindy Hop is a social dance that combines elements of jazz, tap, breakaway, and charleston, and is known for being energetic, fun, and improvisational. 
                         Lindy Hop was initially popular among the African American community in Harlem and gained widespread recognition thanks to the movie<a href="https://www.youtube.com/watch?v=ahoJReiCaPk" target="_blank" rel="Hellzapoppin">"Hellzapoppin"(1941)</a>. 
                         I currently have classes and go to some events at  <a href="https://www.instagram.com/botaswing/" target="_blank" rel="botaswing">Bota Swing</a>.</p>
                 </div>
                 <div class="descripcion">
-                    <p class="Drawing"> Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalized gifts to family/friends on special dates. I've been learning more about drawing for myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
+                    <p class="Drawing"> Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalized gifts to family/friends on special dates. I've been learning more about drawing by myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
                 </div>
 
                 <div class="portfolio-container">
