--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="section" id="about-me">
      <div class="container">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
-        <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a decade ago. </p>
+        <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a century ago. </p>
 
         <p>I'm a creative soul, curious and fascinated by life. I like to challenge myself in the various
            aspects of life. We are constantly learning and is fascinating how the search for knowledge and
