--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mariana Sousa</h1>
                 <h6 class="header-mono" >Engineering and Management | IT Consultant </h6>
-                <a href="assets/docs/CV Mariana.pdf" download="CV Mariana.pdf">
+                <a href="assets/docs/CV_Mariana_Sousa.pdf" download="CV_Mariana_Sousa.pdf">
                   <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Download My CV</button>
                 </a>
 
@@ -517,7 +517,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6 col-lg-6">
                     <h4 class="text-light mb-4 font-weight-normal">Resume(CV)</h4>
-                    <a href="assets/docs/CV Mariana.pdf" download="CV Mariana.pdf">
+                    <a href="assets/docs/CV_Mariana_Sousa.pdf" download="CV_Mariana_Sousa.pdf">
                       <button class="btn bg-primary w-lg" >Download file</button>
                     </a>
                 </div>
