--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@
                             <a href="https://www.accenture.com/pt-pt" target="_blank" rel="Accenture">Accenture</a>
                         </p>
 
-                        <p><b>Keywords:</b> ABAP; ABAP-OO; Advanced Business Application Programming (ABAP); 
-                            Eclipse, Microsoft Excel; International teams; Communication; Spanish </p>
+                        <p><b>Keywords:</b> SAP ABAP, SAP IS-U; SAP HCM; ABAP-OO; Advanced Business Application Programming
+                            (ABAP); Eclipse, Agile; Microsoft Excel; International teams; Communication; Spanish; English; ALV
+                            grids; BAdIs; BAPIs; Enhancements; BPEM (IS-U);Exits; Mass Activity; Infotypes. </p>
 
                         <div class="more-content">
 
@@ -193,7 +194,9 @@
                             <li>Identify scope, define requirements, and create functional and technical specifications;</li>
                             <li>Analyze, design, build, and test new components or enhancements to existing modules, including reporting and analysis capabilities;</li>
                             <li>Ensure applications are operating according to service commitments;</li>
-                            <li>Coordinate the implementation of the solution and support change efforts.</li>
+                            <li>Performance analysis and tuning;</li>
+                            <li>Training new joiners in abap programming;</li>
+                            <li>Preparation of presentations for meetings and their minutes.</li>
                                 
                           </ul>
                         
