--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
     </section>
 
-    <section class="section noborder awards">
+    <section class="section">
         <div class="container">
             <h2 class="mb-5"><span class="text-danger">My</span> Projects</h2>
 
