--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                         </p>
 
                         <p><b>Keywords:</b> SAP ABAP, SAP IS-U; SAP HCM; ABAP-OO; Advanced Business Application Programming
-                            (ABAP); Eclipse, Agile; Microsoft Excel; International teams; Communication; Spanish; English; ALV
-                            grids; BAdIs; BAPIs; Enhancements; BPEM (IS-U);Exits; Mass Activity; Infotypes. </p>
+                            (ABAP); Eclipse; Agile; Microsoft Excel; International teams; Communication; Spanish; English; ALV
+                            grids; BAdIs; BAPIs; Enhancements; BPEM (IS-U); Exits; Mass Activity; Infotypes. </p>
 
                         <div class="more-content">
 
