--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
                             </div>
                             <div class="card-body pb-4">
                                 <ul> 
+                                    <li>Certified Associate in Project Management (CAPM) - PMI</li>   
                                     <li>Leadership - Skills Builder</li>
                                     <li>Six Sigma and the Organization (Advanced) - Coursera</li>
                                     <li>Deep learning for business - Coursera</li>
