--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mariana Sousa</h1>
-                <h6 class="header-mono" >Engineering and Management | IT Consultant </h6>
+                <h6 class="header-mono" >SAP Technical Consultant | MSc Industrial Eng. & Management </h6>
                 <a href="assets/docs/CV_Mariana_Sousa.pdf" download="CV_Mariana_Sousa.pdf">
                   <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Download My CV</button>
                 </a>
@@ -77,7 +77,7 @@
     <section class="section" id="about-me">
      <div class="container">
         <h2 class="mb-5">About<span class="text-danger"> Me </span></h2>
-        <p> Hello, my name is Mariana! I was born in the north of Portugal a quarter of a century ago. </p>
+        <p> Hello, my name is Mariana! I was born in the north of Portugal 26 years ago. </p>
 
         <p>I'm a creative soul, curious and fascinated by life. I like to challenge myself in the various
            aspects of life. We are constantly learning and is fascinating how the search for knowledge and
