--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="assets/imgs/foto.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mariana Sousa</h5>
-                        <div class="brand-subtitle">Engineering and Management | IT Consultant </div>
+                        <div class="brand-subtitle">Technology, Innovation & Human Connections </div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
