--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
                             <table class="table-responsive-sm">
                                 <thead>
                                     <tr>
-                                        <th>Programming and Scripting</th>
+                                        <th>Programming & Scripting</th>
                                         <th>Web Development</th>
-                                        <th>Data Analysis and Statistical Tools</th>
-                                        <th>Engineering and Design Software</th>
+                                        <th>Data Analysis & Statistical Tools</th>
+                                        <th>Monitoring & Observability</th>
                                         <th>Others</th>
                                     </tr>
                                 </thead>
@@ -396,8 +396,8 @@
                                         <td>SAP ABAP, SQL, VBA, Python</td>
                                         <td>HTML, CSS, JavaScript (basics)</td>
                                         <td>Microsoft Excel, VBA Excel, SPSS, RStudio, Tableau</td>
-                                        <td>SolidWorks, AutoCAD</td>
-                                        <td>AnyLogic, LaTex, Bizagi</td>
+                                        <td>Docker, Kubernetes, Prometheus, Grafana</td>
+                                        <td>AnyLogic, LaTex, Bizagi, SolidWorks, AutoCAD</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -415,7 +415,7 @@
                             </div>
                         </div>
                         <div class="card-body pb-1">
-                           <p class="languages">Portugues</p>
+                           <p class="languages">Portuguese</p>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
