--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                                     <tr>
                                         <td>SAP ABAP, SQL, VBA, Python</td>
                                         <td>HTML, CSS, JavaScript (basics)</td>
-                                        <td>Microsoft Excel, VBA Excel, SPSS, RStudio, Tableau</td>
-                                        <td>Docker, Kubernetes, Prometheus, Grafana</td>
-                                        <td>AnyLogic, LaTex, Bizagi, SolidWorks, AutoCAD</td>
+                                        <td>Microsoft Excel, VBA Excel, SPSS, Tableau</td>
+                                        <td>Prometheus, Grafana</td>
+                                        <td>LaTex, Bizagi, Docker</td>
                                     </tr>
                                 </tbody>
                             </table>
