--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                         <td>HTML, CSS, JavaScript (basics)</td>
                                         <td>Microsoft Excel, VBA Excel, SPSS, Tableau</td>
                                         <td>Prometheus, Grafana</td>
-                                        <td>LaTex, Bizagi, Docker</td>
+                                        <td>LaTex, Bizagi, Docker, Jira</td>
                                     </tr>
                                 </tbody>
                             </table>
