--- a/index.html
+++ b/index.html
@@ -480,6 +480,27 @@
                     </div>
                 </div>
             </div>
+                <div class="row">
+                <div class="blog-card">
+                    <div class="img-holder">
+                        <img src="assets/imgs/dockwinmonitor.png" alt="DockWinMonitor">
+                    </div>
+                    <div class="content-holder">
+                        <h6 class="title">Windows System Monitoring with Prometheus + Grafana + Docker</h6>
+
+                            <P>This project was developed to explore widely used technologies ( Prometheus, Grafana, and Docker ) 
+                                and demonstrate their combined capabilities in a practical way. 
+                                It implements a Windows monitoring system in a containerized environment, 
+                                showcasing key concepts of observability and infrastructure monitoring. 
+                                This project integrates these tools to enable real-time monitoring of Windows system performance,
+                                collecting and visualizing essential metrics for resource analysis and optimization.</P>
+
+                            <p>Take a look at the repository:<a href="https://github.com/99Mariana/DockWinMonitor/blob/main/README.md" target="_blank" rel="DockWinMonitor"> DockWinMonitor</a></p>
+
+                
+                    </div>
+                </div>
+            </div>
 
         </div>
     </section>
