--- a/index.html
+++ b/index.html
@@ -488,10 +488,10 @@
                     <div class="content-holder">
                         <h6 class="title">Windows System Monitoring with Prometheus + Grafana + Docker</h6>
 
-                            <P>This project was developed to explore widely used technologies ( Prometheus, Grafana, and Docker ) 
+                            <P>This project was developed to explore widely used technologies (Prometheus, Grafana, and Docker)
                                 and demonstrate their combined capabilities in a practical way. 
-                                It implements a Windows monitoring system in a containerized environment, 
-                                showcasing key concepts of observability and infrastructure monitoring. 
+                                It implements a Windows monitoring system in a container environment, 
+                                presenting key concepts of observability and infrastructure monitoring. 
                                 This project integrates these tools to enable real-time monitoring of Windows system performance,
                                 collecting and visualizing essential metrics for resource analysis and optimization.</P>
 
