--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/dockwinmonitor.png" alt="DockWinMonitor">
+                        <img src="assets/imgs/dockwin.png" alt="DockWinMonitor">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Windows System Monitoring with Prometheus + Grafana + Docker</h6>
