--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                         <img src="assets/imgs/dockwin.png" alt="DockWinMonitor">
                     </div>
                     <div class="content-holder">
-                        <h6 class="title">Windows System Monitoring with Prometheus + Grafana + Docker</h6>
+                        <h6 class="title">Windows System Monitor</h6>
 
                             <P>This project was developed to explore widely used technologies (Prometheus, Grafana, and Docker)
                                 and demonstrate their combined capabilities in a practical way. 
