--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                 and demonstrate their combined capabilities in a practical way. 
                                 It implements a Windows monitoring system in a container environment, 
                                 presenting key concepts of observability and infrastructure monitoring. 
-                                This project integrates these tools to enable real-time monitoring of Windows system performance,
+                                This project enable real-time monitoring of Windows system performance,
                                 collecting and visualizing essential metrics for resource analysis and optimization.</P>
 
                             <p>Take a look at the repository:<a href="https://github.com/99Mariana/DockWinMonitor/blob/main/README.md" target="_blank" rel="DockWinMonitor"> DockWinMonitor</a></p>
