--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
                             <a href="https://vwds.pt/about-us/" target="_blank" rel="volkswagen-digital-solutions">Volkswagen Digital Solutions</a>
                         </p>
 
+                        <p><b>Keywords:</b> SAP ABAP, SAP Purchasing (SAP MM-PUR) </p>
+
                         <!-- <p><b>Keywords:</b> SAP ABAP, SAP IS-U; SAP HCM; ABAP-OO; Advanced Business Application Programming
                             (ABAP); Eclipse; Agile; Microsoft Excel; International teams; Communication; Spanish; English; ALV
                             grids; BAdIs; BAPIs; Enhancements; BPEM (IS-U); Exits; Mass Activity; Infotypes. </p>
